fix classes, fix name variables, add nav overflow for small screen

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,5 +1,5 @@
-$nav-item_color: #00acdc;
-$text-font: "Roboto", sans-serif;
+$color_vivid-blue: #00acdc;
+$font-family-Roboto: "Roboto", sans-serif;
 
 .header {
   display: flex;
@@ -11,7 +11,7 @@ $text-font: "Roboto", sans-serif;
   background: #fff;
 }
 
-.logo {
+.header__logo {
   width: 40px;
   height: 40px;
 }
@@ -20,6 +20,15 @@ $text-font: "Roboto", sans-serif;
   display: flex;
   align-items: center;
   height: 60px;
+}
+
+@media (max-width: 950px) {
+  .nav {
+    margin-left: 10px;
+    margin-top: 17px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
 }
 
 .nav__list {
@@ -42,7 +51,7 @@ $text-font: "Roboto", sans-serif;
   display: inline-block;
   text-decoration: none;
   color: #000;
-  font-family: $text-font;
+  font-family: $font-family-Roboto;
   font-weight: 500;
   font-size: 12px;
   line-height: 60px;
@@ -51,7 +60,7 @@ $text-font: "Roboto", sans-serif;
 
 .nav__link:hover,
 .is-active {
-  color: $nav-item_color;
+  color: $color_vivid-blue;
 }
 
 .is-active::after {
@@ -62,6 +71,6 @@ $text-font: "Roboto", sans-serif;
   left: 0;
   right: 0;
   height: 4px;
-  background-color: $nav-item_color;
+  background-color: $color_vivid-blue;
   border-radius: 8px;
 }
