--- a/src/styles/_product-card.scss
+++ b/src/styles/_product-card.scss
@@ -1,8 +1,8 @@
-$text-font: "Roboto", sans-serif;
+$font-family-Roboto: "Roboto", sans-serif;
 
-@mixin star($size) {
-  width: $size;
-  height: $size;
+@mixin star($star-size) {
+  width: $star-size;
+  height: $star-size;
 }
 
 .product-card {
@@ -12,61 +12,61 @@ $text-font: "Roboto", sans-serif;
   margin: 0 24px 50px;
   border-radius: 5px;
   border: 1px solid #f3f3f3;
-  font-family: $text-font;
+  font-family: $font-family-Roboto;
 }
 
-.product__image {
+.product-card__image {
   width: 160px;
   height: 134px;
   margin: 16px 5px 41px;
 }
 
-.product__description {
+.product-card__description {
   margin-bottom: 6px;
   font-weight: 500;
   font-size: 12px;
   line-height: 15px;
 }
 
-.product__code {
+.product-card__code {
   margin: 0 0 15px;
   font-weight: 400;
   font-size: 11px;
   line-height: 12px;
 }
 
-.product__rating {
+.product-card__rating {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
 }
 
-.star-active {
+.product-card__star--active {
   background: no-repeat center url(../images/star-active.svg);
   margin-right: 4px;
   @include star(15px);
 }
 
-.star {
+.product-card__star {
   background: no-repeat center url(../images/star.svg);
   margin-right: 21.5px;
   @include star(15px);
 }
 
-.product__title {
+.product-card__title {
   font-weight: 400;
   font-size: 11px;
   line-height: 15px;
   margin: 0;
 }
 
-.product__cost {
+.product-card__cost {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
 }
 
-.product__price {
+.product-card__price {
   font-weight: 700;
   font-size: 16px;
   line-height: 19px;
@@ -79,7 +79,7 @@ $text-font: "Roboto", sans-serif;
   border-radius: 5px;
   color: #fff;
   background-color: #00acdc;
-  font-family: $text-font;
+  font-family: $font-family-Roboto;
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
